# signal_processing

./: .gitignore  CMakeLists.txt
program/: CMakeLists.txt  main.cpp
program/forms/: dft_tab.ui  filtering_tab.ui  main_window.ui  main_window2.ui  operation_tab.ui  result_signal_dialog.ui  sampling_tab.ui  signal_display_widget.ui
program/include/: dft_tab.hpp  filtering_tab.hpp  main_window.hpp  main_window2.hpp  operation_tab.hpp  result_signal_dialog.hpp  sampling_tab.hpp  signal_display_widget.hpp
program/src/: dft_tab.cpp  filtering_tab.cpp  main.cpp  main_window.cpp  main_window2.cpp  operation_tab.cpp  result_signal_dialog.cpp  sampling_tab.cpp  signal_display_widget.cpp
test_program/: CMakeLists.txt  main.cpp
